--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -40,5 +40,9 @@
         <ion-icon slot="start" color="medium" name="color-fill"></ion-icon>
         <ion-label>Theme Your App</ion-label>
       </ion-item>
+      <ion-item>
+        <ion-icon slot="start" color="medium" name="color-fill"></ion-icon>
+        <ion-label><button ion-button (click)="presentModal()" class="button">Open Modal</button></ion-label>
+      </ion-item>
     </ion-list>
 </ion-content>
