--- a/src/app/components/modal/modal.component.html
+++ b/src/app/components/modal/modal.component.html
@@ -1,10 +1,5 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title align-self-center>Login</ion-title>
-  </ion-toolbar>
-</ion-header>
-<ion-content>
-
+<ion-card>
+      <ion-card-content>
   <ion-input type="email" placeholder="Email" position="floating" padding></ion-input>
 
   <ion-input type="password" placeholder="Password" padding></ion-input>
@@ -13,4 +8,6 @@
      <ion-item href="redirect somewhere" >
       <a>Forgot Your Password?</a>
     </ion-item>
-</ion-content>
+  </ion-card-content>
+</ion-card>
+
