--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,14 +1,5 @@
-<ion-header>
-  <ion-toolbar>
-      <ion-icon name="restaurant" size="large"></ion-icon>
-    <ion-title>
-      Food Reservation
-    </ion-title>
-    <div float-right>
-    <ion-button ion-button (click)="presentModal()" class="button">Login</ion-button>
-  </div>
-  </ion-toolbar>
-</ion-header>
+
 <div>
-    <ion-searchbar placeholder="Location"></ion-searchbar>
-</div>
+    <ion-searchbar placeholder="Location" animated="true"></ion-searchbar>
+  </div>
+  
