--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,33 @@
 <ion-app>
-    <ion-menu>
-    </ion-menu>
-    <ion-router-outlet main></ion-router-outlet>
+    
+    <ion-router-outlet main>
+            <ion-header>
+                    <ion-toolbar>
+                        <ion-icon name="restaurant" size="large" padding></ion-icon>
+                      <ion-title>
+                        Food Reservation
+                      </ion-title>
+                      <div float-right>
+                      <ion-button ion-button (click)="presentModal()" class="button" size="small" strong="true" padding>Login</ion-button>
+                    </div>
+                    </ion-toolbar>
+                  </ion-header>
+        <ion-tabs>
+            <!-- Tab bar -->
+            <ion-tab-bar slot="bottom">
+              <ion-tab-button tab="Explore">
+                <ion-icon name="search"></ion-icon>
+              </ion-tab-button>
+              <ion-tab-button tab="Reserve">
+              <ion-icon name="restaurant"></ion-icon>
+            </ion-tab-button>
+              <ion-tab-button tab="settings">
+                <ion-icon name="settings"></ion-icon>
+              </ion-tab-button>
+              <ion-tab-button tab="account">
+                <ion-icon name="person"></ion-icon>
+              </ion-tab-button>
+            </ion-tab-bar>
+          </ion-tabs>
+    </ion-router-outlet>
 </ion-app>
