--- a/src/app/components/modal/modal.component.html
+++ b/src/app/components/modal/modal.component.html
@@ -5,6 +5,7 @@
   <ion-input type="password" placeholder="Password" padding></ion-input>
 
      <ion-button expand="block" (click)="userLogin()">Login</ion-button>
+     <ion-button expand="block" (click)="userLogin()" color="light" >Register</ion-button>
      <ion-item href="redirect somewhere" >
       <a>Forgot Your Password?</a>
     </ion-item>
