--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -5,6 +5,7 @@
       Food Reservation
     </ion-title>
     <div float-right>
+        <ion-button ion-button (click)="gotoRegister1()" class="button">Register</ion-button>
     <ion-button ion-button (click)="presentModal()" class="button">Login</ion-button>
   </div>
   </ion-toolbar>
