--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
                         Food Reservation
                       </ion-title>
                       <div float-right>
-                      <ion-button ion-button (click)="presentModal()" class="button" size="small" strong="true" padding>Login</ion-button>
+                      <ion-button ion-button (click)="presentModal()" class="button" size="small" strong="true">Login</ion-button>
                     </div>
                     </ion-toolbar>
                   </ion-header>
