--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,19 +1,15 @@
-<<<<<<< HEAD
 <ion-header>
   <ion-toolbar>
       <ion-icon name="restaurant" size="large"></ion-icon>
     <ion-title>
       Food Reservation
     </ion-title>
-    <div float-right>
-        <ion-button ion-button (click)="gotoRegister1()" class="button">Register</ion-button>
-    <ion-button ion-button (click)="presentModal()" class="button">Login</ion-button>
+    <div >
+        <!---<ion-button ion-button (click)="gotoRegister1()" class="button">Register</ion-button> -->
+      <ion-button ion-button (click)="presentModal()" class="button" >Login</ion-button>
   </div>
   </ion-toolbar>
 </ion-header>
-=======
-
->>>>>>> 2690994ee8da7ead9979f819784632e874d04c4d
 <div>
     <ion-searchbar placeholder="Location" animated="true"></ion-searchbar>
   </div>
