--- a/src/app/registration-page2/registration-page2.page.html
+++ b/src/app/registration-page2/registration-page2.page.html
@@ -5,18 +5,15 @@
 </ion-header>
 
 <ion-content padding>
-    <ion-list>
-        <ion-item>
-          <ion-input placeholder="Enter Username"></ion-input>
-        </ion-item>
-        <ion-item>
-          <ion-input placeholder="Enter Password"  type="password"></ion-input>
-        </ion-item>
-        <ion-item>
-          <ion-input placeholder="Mobile No." ></ion-input>
-        </ion-item>
-        <ion-item>
-            <ion-button expand="full">Next</ion-button>
-        </ion-item>
-      </ion-list>
+  <ion-list>
+      <ion-item>
+        <ion-input placeholder="Enter OTP"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-input placeholder="Enter Captcha"></ion-input>
+      </ion-item>
+      
+      <ion-button expand="full" (click)="gotoRegister3()" shape="round">Next</ion-button> 
+    </ion-list>
 </ion-content>
+
