--- a/src/app/registration-page3/registration-page3.page.html
+++ b/src/app/registration-page3/registration-page3.page.html
@@ -5,5 +5,16 @@
 </ion-header>
 
 <ion-content padding>
-
+  <ion-list>
+      <ion-item>
+        <ion-input placeholder="Enter Username"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-input placeholder="Enter Password"  type="password"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-input placeholder="Re-enter Password" type="password"></ion-input>
+      </ion-item>
+      <ion-button expand="full" (click)="gotoLanding()" shape="round">Register</ion-button> 
+    </ion-list>
 </ion-content>
