--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,16 +1,6 @@
-<ion-header>
-  <ion-toolbar>
-      <ion-icon name="restaurant" size="large"></ion-icon>
-    <ion-title>
-      Food Reservation
-    </ion-title>
-    <div >
-        <!---<ion-button ion-button (click)="gotoRegister1()" class="button">Register</ion-button> -->
-      <ion-button ion-button (click)="presentModal()" class="button" >Login</ion-button>
-  </div>
-  </ion-toolbar>
-</ion-header>
-<div>
-    <ion-searchbar placeholder="Location" animated="true"></ion-searchbar>
-  </div>
+
+<div padding postion="float bottom"> 
+  <ion-searchbar placeholder="Location" animated="true"></ion-searchbar>
+</div>
+
   
