--- a/src/app/registration-page1/registration-page1.page.html
+++ b/src/app/registration-page1/registration-page1.page.html
@@ -1,23 +1,36 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>RegistrationPage1</ion-title>
+    <ion-title>Registration</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content padding>
-  <ion-list>
-    <ion-item>
-      <ion-input placeholder="First Name"></ion-input>
-    </ion-item>
-    <ion-item>
-      <ion-input placeholder="Last Name" ></ion-input>
-    </ion-item>
-    <ion-item>
-        <ion-input placeholder="Mobile No." type="tel"></ion-input>
-    </ion-item>
-    <ion-item>
-      <ion-textarea input-style="box" placeholder="Address"></ion-textarea>
-    </ion-item>
-      <ion-button expand="block" (click)="gotoRegister2()" shape="round">Next</ion-button>
-  </ion-list>
-</ion-content>
+<ion-card>
+  <ion-card-content>
+    <ion-list>
+      <ion-item>
+        <ion-input placeholder="Name" [(ngModel)]="registerdata.name"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-input placeholder="Email" [(ngModel)]="registerdata.email"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-input placeholder="Password" type="password" [(ngModel)]="registerdata.password"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-input placeholder="Mobile No." type="tel" [(ngModel)]="registerdata.phone"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label>Date</ion-label>
+        <ion-datetime displayFormat="MM DD YYYY" placeholder="Select Date" [(ngModel)]="registerdata.dob">
+        </ion-datetime>
+      </ion-item>
+      <ion-item>
+        <ion-input placeholder="Enter OTP"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-input placeholder="Enter Captcha"></ion-input>
+      </ion-item>
+      <ion-button expand="block" (click)="Register()" shape="round">Register</ion-button>
+    </ion-list>
+  </ion-card-content>
+</ion-card>
