--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,8 @@
 <ion-toolbar>
-    <ion-title><ion-icon name="pizza"></ion-icon> &nbsp;&nbsp;Food Reservation</ion-title>
+    <ion-title>
+      <!--<ion-img src="/assets/logo1.png"></ion-img>-->
+      <h2 style="text-align: center">DineSmart</h2>
+    </ion-title>
 
     <ion-buttons slot="primary"  *ngIf="!isLoggedIn" (click)="presentModal()" slot="end">
     <ion-button color="secondary" fill="solid" shape="round">
