--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,63 +1,59 @@
 <div>
-  <ion-searchbar placeholder="Location" animated="true"></ion-searchbar>
+  <ion-searchbar placeholder="Cuisine" animated="true"></ion-searchbar>
 </div>
 
-<div>
-  <ion-item>
-    <a>RECOMMENDED</a>
-  </ion-item>
-  <ion-grid>
 
+  <!--
+  <ion-item>
+    <h4 padding>RECOMMENDED CUISINES</h4>
+  </ion-item>
+  -->
+
+  <ion-content padding >
+    <div class="homePageClass">
+  <ion-grid>
     <ion-row>
       <ion-col>
         <ion-card>
-          <ion-card-header>
-
-            <ion-card-title>1</ion-card-title>
-          </ion-card-header>
+          
+           <ion-card-title padding>Goan</ion-card-title>
 
           <ion-card-content>
-            Keep close to Nature's heart... and break clear away, once in awhile,
-            and climb a mountain or spend a week in the woods. Wash your spirit clean.
+            <ion-img src="/assets/goan.jpg"></ion-img>
+            Description.
           </ion-card-content>
         </ion-card>
       </ion-col>
       <ion-col>
         <ion-card>
-          <ion-card-header>
 
-            <ion-card-title>2</ion-card-title>
-          </ion-card-header>
+            <ion-card-title>Continental</ion-card-title>
 
           <ion-card-content>
-            Keep close to Nature's heart... and break clear away, once in awhile,
-            and climb a mountain or spend a week in the woods. Wash your spirit clean.
+              <ion-img src="/assets/continental.jpg"></ion-img>
+              Description.
           </ion-card-content>
         </ion-card>
       </ion-col>
       <ion-col>
         <ion-card>
-          <ion-card-header>
 
-            <ion-card-title>3</ion-card-title>
-          </ion-card-header>
-
+            <ion-card-title>Fast food Chains</ion-card-title>
+         
           <ion-card-content>
-            Keep close to Nature's heart... and break clear away, once in awhile,
-            and climb a mountain or spend a week in the woods. Wash your spirit clean.
+              <ion-img src="/assets/kfc.jpg"></ion-img>
+              Description.
           </ion-card-content>
         </ion-card>
       </ion-col>
       <ion-col>
         <ion-card>
-          <ion-card-header>
-
-            <ion-card-title>4</ion-card-title>
-          </ion-card-header>
-
+       
+            <ion-card-title>North Indian</ion-card-title>
+         
           <ion-card-content>
-            Keep close to Nature's heart... and break clear away, once in awhile,
-            and climb a mountain or spend a week in the woods. Wash your spirit clean.
+              <ion-img src="/assets/northindian.jpg"></ion-img>
+              Description.
           </ion-card-content>
         </ion-card>
       </ion-col>
@@ -65,3 +61,4 @@
 
   </ion-grid>
 </div>
+</ion-content>
