--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -2,3 +2,12 @@
   max-height: 35vh;
   overflow: hidden;
 }
+
+ion-card {
+  background-color: rgb(236, 228, 228);
+}
+
+.homePageClass {
+  background: url("/assets/background1.jpg");
+}
+
