--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,18 +1,17 @@
-<ion-toolbar>
+<ion-toolbar >
     <ion-title>
       <!--<ion-img src="/assets/logo1.png"></ion-img>-->
-      <h2 style="text-align: center">DineSmart</h2>
+      <h1 style="text-align: center">DineSmart</h1>
     </ion-title>
 
     <ion-buttons slot="primary"  *ngIf="!isLoggedIn" (click)="presentModal()" slot="end">
     <ion-button color="secondary" fill="solid" shape="round">
-      <ion-icon slot="icon-only" name="paw"></ion-icon> Login
-    </ion-button>
+      <ion-icon slot="icon-only" name="paw"></ion-icon>Login</ion-button>
   </ion-buttons>
 
   <ion-buttons slot="success" *ngIf="isLoggedIn" (click)="presentActionSheet()" slot="end">
       <ion-button color="success" fill="solid" shape="round">
-        <ion-icon slot="icon-only" name="contact"></ion-icon> {{userName}}
+        <ion-icon slot="icon-only" name="contact"></ion-icon>{{userName}}
       </ion-button>
     </ion-buttons>
 
