--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -10,53 +10,50 @@
   -->
 
   <ion-content padding >
-    <div class="homePageClass">
+    <div class="classSetBackground">
   <ion-grid>
     <ion-row>
+      
       <ion-col>
-        <ion-card>
-          
-           <ion-card-title padding>Goan</ion-card-title>
-
-          <ion-card-content>
-            <ion-img src="/assets/goan.jpg"></ion-img>
-            Description.
-          </ion-card-content>
+        <ion-card padding>
+          <ion-card-title >{{restaurantName}}</ion-card-title>
+            <ion-card-content>
+              <ion-img src="/assets/goan.jpg"></ion-img>
+              Description.
+            </ion-card-content>
         </ion-card>
       </ion-col>
+
       <ion-col>
-        <ion-card>
-
-            <ion-card-title>Continental</ion-card-title>
-
+        <ion-card padding>
+          <ion-card-title >Continental</ion-card-title>
           <ion-card-content>
               <ion-img src="/assets/continental.jpg"></ion-img>
-              Description.
+                Description.
           </ion-card-content>
         </ion-card>
       </ion-col>
-      <ion-col>
-        <ion-card>
 
-            <ion-card-title>Fast food Chains</ion-card-title>
-         
-          <ion-card-content>
+      <ion-col>
+        <ion-card padding>
+            <ion-card-title>Fast food Chains</ion-card-title>       
+            <ion-card-content>
               <ion-img src="/assets/kfc.jpg"></ion-img>
               Description.
           </ion-card-content>
         </ion-card>
       </ion-col>
+
       <ion-col>
-        <ion-card>
-       
-            <ion-card-title>North Indian</ion-card-title>
-         
-          <ion-card-content>
+        <ion-card padding>
+            <ion-card-title>North Indian</ion-card-title>       
+            <ion-card-content>
               <ion-img src="/assets/northindian.jpg"></ion-img>
               Description.
           </ion-card-content>
         </ion-card>
       </ion-col>
+
     </ion-row>
 
   </ion-grid>
