--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -7,7 +7,7 @@ ion-card {
   background-color: rgb(236, 228, 228);
 }
 
-.homePageClass {
+.classSetBackground {
   background: url("/assets/background1.jpg");
 }
 
