--- a/src/app/registration-page1/registration-page1.page.html
+++ b/src/app/registration-page1/registration-page1.page.html
@@ -1,10 +1,11 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>Registration</ion-title>
+  <ion-toolbar color="secondary">
+    <ion-title style="text-align: center">Registration</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-card padding>
+<ion-content >
+<ion-card >
   <ion-card-content>
     <ion-list>
       <ion-item>
@@ -34,3 +35,4 @@
     </ion-list>
   </ion-card-content>
 </ion-card>
+</ion-content>
