--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,7 @@
 <ion-toolbar >
     <ion-title>
       <!--<ion-img src="/assets/logo1.png"></ion-img>-->
-      <h1 style="text-align: center">DineSmart</h1>
+      <h1 >DineSmart</h1>
     </ion-title>
 
     <ion-buttons slot="primary"  *ngIf="!isLoggedIn" (click)="presentModal()" slot="end">
