--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,5 +1,5 @@
 <div>
-  <ion-searchbar placeholder="Cuisine" animated="true"></ion-searchbar>
+  <ion-searchbar placeholder="Cuisine/Restaurant" animated="true"></ion-searchbar>
 </div>
 
 
@@ -9,48 +9,30 @@
   </ion-item>
   -->
 
-  <ion-content padding >
+<ion-content >
+  <div scrollx=true direction="x">
+    <ion-col class="fixed">
+      <ion-card  *ngFor = "let eachRest of allRestaurantData">
+          <ion-card-title padding>{{eachRest.RName}}</ion-card-title>
+          <ion-img src="data:image/jpeg;base64,{{eachRest.RImg}}"></ion-img>
+      </ion-card>
+    </ion-col>
+  </div>
+</ion-content>
+
+
+<!-- <ion-content padding>
     <div class="classSetBackground">
-  <ion-grid>
+  <ion-grid  *ngFor = "let eachRest of allRestaurantData">
     <ion-row>
-      
-      <ion-col>
-        <ion-card padding>
-          <ion-card-title >{{restaurantName}}</ion-card-title>
+      <ion-col >
+        <ion-card >
+          <ion-card-title padding>{{eachRest.RName}}</ion-card-title>
             <ion-card-content>
-              <ion-img src="/assets/goan.jpg"></ion-img>
-              Description.
+              
+              <ion-img src="data:image/jpeg;base64,{{eachRest.RImg}}"></ion-img>
+              {{eachRest.RAddress}}.
             </ion-card-content>
-        </ion-card>
-      </ion-col>
-
-      <ion-col>
-        <ion-card padding>
-          <ion-card-title >Continental</ion-card-title>
-          <ion-card-content>
-              <ion-img src="/assets/continental.jpg"></ion-img>
-                Description.
-          </ion-card-content>
-        </ion-card>
-      </ion-col>
-
-      <ion-col>
-        <ion-card padding>
-            <ion-card-title>Fast food Chains</ion-card-title>       
-            <ion-card-content>
-              <ion-img src="/assets/kfc.jpg"></ion-img>
-              Description.
-          </ion-card-content>
-        </ion-card>
-      </ion-col>
-
-      <ion-col>
-        <ion-card padding>
-            <ion-card-title>North Indian</ion-card-title>       
-            <ion-card-content>
-              <ion-img src="/assets/northindian.jpg"></ion-img>
-              Description.
-          </ion-card-content>
         </ion-card>
       </ion-col>
 
@@ -58,4 +40,4 @@
 
   </ion-grid>
 </div>
-</ion-content>
+</ion-content> -->
