--- a/src/app/foodmenu/foodmenu.page.html
+++ b/src/app/foodmenu/foodmenu.page.html
@@ -1,16 +1,16 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>foodmenu</ion-title>
-    <ion-buttons>
+    <ion-title>Food Menu</ion-title>
+    <!-- <ion-buttons>
       <ion-button slot="end">
         <ion-icon slot="icon-only" name="close" *ngIf="automaticClose"></ion-icon>
         <ion-icon slot="icon-only" name="resize" *ngIf="!automaticClose"></ion-icon>
       </ion-button>
-    </ion-buttons>
+    </ion-buttons> -->
   </ion-toolbar>
-</ion-header>
+ </ion-header>
 
-<ion-content >
+<!-- <ion-content >
   <ion-list *ngFor="let i of [1, 2, 3, 4, 5, 6, 7, 8]" class="accordion-list" lines="none" detail="false" no-padding>
     <ion-item tappable (click)="toggleSection(i)" >
       <ion-icon slot="start" name="arrow-forward" ></ion-icon>
@@ -34,4 +34,14 @@
 
   </ion-list>
 
+</ion-content> -->
+<ion-content >
+  <div scrollx=true direction="x">
+    <ion-col class="fixed">
+      <ion-card  *ngFor = "let eachRest of food_data">
+          <ion-card-title padding>{{eachRest.Name}}</ion-card-title>
+          <ion-img src="data:image/jpeg;base64,{{eachRest.Fimage}}"></ion-img>
+      </ion-card>
+    </ion-col>
+  </div>
 </ion-content>
