--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -11,7 +11,7 @@
         <ion-label>Explore</ion-label>
       <ion-icon name="search"></ion-icon>
     </ion-segment-button>
-    <ion-segment-button>
+    <ion-segment-button (click)="gotoProf()">
         <ion-label>Profile</ion-label>
         <ion-icon name="person"></ion-icon>
       </ion-segment-button>
