--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -12,9 +12,9 @@
 <ion-content >
   <div scrollx=true direction="x">
     <ion-col class="fixed">
-      <ion-card  *ngFor = "let eachRest of allRestaurantData">
+      <ion-card  *ngFor = "let eachRest of allRestaurantData" (click)="onClickRestaurant()">
           <ion-card-title padding>{{eachRest.RName}}</ion-card-title>
-          <ion-img src="data:image/jpeg;base64,{{eachRest.RImg}}" (click)="onClickRestaurant()"></ion-img>
+          <ion-img src="data:image/jpeg;base64,{{eachRest.RImg}}" ></ion-img>
       </ion-card>
     </ion-col>
   </div>
