--- a/src/app/foodmenu/foodmenu.page.html
+++ b/src/app/foodmenu/foodmenu.page.html
@@ -59,7 +59,7 @@
       <ion-label padding >
           <h2 text-wrap>{{eachRest.Name}}</h2> 
           
-        <p> ingredient list <ion-icon name="arrow-dropdown"></ion-icon></p>
+        <p> Ingredient list <ion-icon name="arrow-dropdown"></ion-icon></p>
       </ion-label>
       <ion-icon name="remove" color="danger" (click)="removeItem()"></ion-icon>
           &nbsp;
