--- a/src/app/profile/profile.page.html
+++ b/src/app/profile/profile.page.html
@@ -1,9 +1,10 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>{{userName}}</ion-title>
+    <ion-title>{{userEmail}}</ion-title>
+
   </ion-toolbar>
 </ion-header>
 
-<ion-content padding>
 
-</ion-content>
+
+
