--- a/src/app/restaurant-expand/restaurant-expand.page.html
+++ b/src/app/restaurant-expand/restaurant-expand.page.html
@@ -29,7 +29,7 @@
           </ion-button>
         </ion-col>
         <ion-col col-6>
-            <ion-button expand="full" color="primary" >
+            <ion-button expand="full" color="primary" (click)="booktable()">
                 <ion-icon slot="end" name="wine"></ion-icon>
                 Book a Table
               
