--- a/src/app/restaurant-expand/restaurant-expand.page.scss
+++ b/src/app/restaurant-expand/restaurant-expand.page.scss
@@ -19,15 +19,31 @@ ion-header {
     
 
     ion-title{
-        font-family: Verdana, Geneva, Tahoma, sans-serif;
-        //text-align: center;
-        font-style: italic;
-        font-weight: bold;
-        background-image: linear-gradient(to right,red, yellow);
+            
+      
+            
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
+            //text-align: center;
+            font-style: italic;
+            font-weight: bold;
+            background-image: linear-gradient(to right,red, yellow);
+
+            h2{
+                font-family: Verdana, Geneva, Tahoma, sans-serif;
+                font-weight: bold;
+                background-image: linear-gradient(to right,red, yellow);
+                width: 100%;
+                
+            }
+        
     }
 }
 
-p {
+.ratingBar {
+    font-family: fantasy;
     background-image: linear-gradient(to right,red, yellow);
+    width: 100%;
+    padding: 1px;
+    //text-decoration: underline;
 }
 
