--- a/src/app/restaurant-expand/restaurant-expand.page.html
+++ b/src/app/restaurant-expand/restaurant-expand.page.html
@@ -22,7 +22,7 @@
     <div class="ratingBar">
       <h3>
         &nbsp;
-        <ion-icon name="create" (click)="viewReviews(id)"></ion-icon>
+        <ion-icon name="create" (click)="viewReviews()"></ion-icon>
         &nbsp;
           <u>User Ratings and Reviews:</u> &nbsp; {{rating}}/5
         <ion-icon name="star" ></ion-icon> 
