--- a/src/app/rest-reviews-and-ratings/rest-reviews-and-ratings.page.html
+++ b/src/app/rest-reviews-and-ratings/rest-reviews-and-ratings.page.html
@@ -1,9 +1,44 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>User Reviews</ion-title>
+<ion-header >
+  <ion-toolbar >
+    <ion-title padding>
+        <ion-icon name="restaurant"></ion-icon>
+        Ratings and Reviews
+    </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content padding>
+<ion-content >
+      <div padding style="border: 2px solid"> 
+        <ion-item>
+        <ion-label color="primary" stacked><ion-icon name="contact"></ion-icon>
+          UserName(only if logged in)</ion-label>
+          <ion-icon name="arrow-down" color="danger" (click)="rateDown()"></ion-icon>
+         
+          <h1>{{inputRating}}/5</h1>
+         
+        <ion-icon name="arrow-up" color="success" (click)="rateUp()"></ion-icon>
+        </ion-item>
+        
+        <ion-textarea type="text" placeholder="Type your review here"></ion-textarea>
+      
+        <ion-button expand="block" (click)="submitReview()" shape="round">Submit</ion-button>
+      </div>
+    
+    <ion-list *ngFor = "let reviewInfo of reviewData"  no-padding>
+      <ion-item >
+        <ion-label padding >
+            <h1 text-wrap>
+              <ion-icon name="contact"></ion-icon>
+              {{reviewInfo.CName}}
+            </h1> 
+            
+          <p>"{{reviewInfo.RReview}}"</p>
+        </ion-label>
+       
+        <span slot="end"> {{reviewInfo.RRating}}/5 &nbsp;     
+        </span>
 
-</ion-content>
+      </ion-item>
+      
+    </ion-list>
+  </ion-content>
