--- a/src/app/restaurant-expand/restaurant-expand.page.scss
+++ b/src/app/restaurant-expand/restaurant-expand.page.scss
@@ -27,14 +27,8 @@ ion-header {
             font-style: italic;
             font-weight: bold;
             background-image: linear-gradient(to right,red, yellow);
+            text-align: center;
 
-            h2{
-                font-family: Verdana, Geneva, Tahoma, sans-serif;
-                font-weight: bold;
-                background-image: linear-gradient(to right,red, yellow);
-                width: 100%;
-                
-            }
         
     }
 }
@@ -43,7 +37,7 @@ ion-header {
     font-family: fantasy;
     background-image: linear-gradient(to right,red, yellow);
     width: 100%;
-    padding: 1px;
+    padding: 2px;
     //text-decoration: underline;
 }
 
