--- a/src/app/foodmenu/foodmenu.page.html
+++ b/src/app/foodmenu/foodmenu.page.html
@@ -1,77 +1,48 @@
 <ion-header>
-  <ion-toolbar >
+  <ion-toolbar>
     <ion-title *ngIf="food_data" padding>
-      {{food_data[0].RName}}  Food Menu
+      {{food_data[0].RName}} Food Menu
     </ion-title>
-    <!-- <ion-buttons>
-      <ion-button slot="end">
-        <ion-icon slot="icon-only" name="close" *ngIf="automaticClose"></ion-icon>
-        <ion-icon slot="icon-only" name="resize" *ngIf="!automaticClose"></ion-icon>
-      </ion-button>
-    </ion-buttons> -->
+    <ion-title *ngIf="food_data" padding>
+        Total Cost - &#8377;{{total}}
+      </ion-title>
   </ion-toolbar>
- </ion-header>
-
-<!-- <ion-content >
-  <ion-list *ngFor="let i of [1, 2, 3, 4, 5, 6, 7, 8]" class="accordion-list" lines="none" detail="false" no-padding>
-    <ion-item tappable (click)="toggleSection(i)" >
-      <ion-icon slot="start" name="arrow-forward" ></ion-icon>
-      <ion-icon slot="start" name="arrow-down" ></ion-icon>
-      <ion-label>
-        {{i}}
-      </ion-label>
-    </ion-item>
-    
-    <div>
-      <ion-list *ngFor="let j of [1, 2, 3, 4]" lines="none" class="child-list">
-          <ion-item tappable (click)="toggleItem(i,j)" >
-              <ion-icon slot="start" name="arrow-forward" ></ion-icon>
-              <ion-icon slot="start" name="arrow-down" ></ion-icon>
-              <ion-label>
-                {{j}}
-              </ion-label>
-            </ion-item>
-      </ion-list>
-    </div>
-
-  </ion-list>
-
-</ion-content> -->
-<!-- <ion-content >
-  <div scrollx=true direction="x">
-    <ion-col class="fixed">
-      <ion-card  *ngFor = "let eachRest of food_data">
-          <h3 padding>{{eachRest.Name}}</h3>
-          <img src="data:image/jpeg;base64,{{eachRest.Fimage}}" slot="end" style="height: 50px; width: 50px">sample text
-          <p style='font-family:fantasy' slot="end">Rate: {{eachRest.Rate}}</p>
-          
-      </ion-card>
-    </ion-col>
-  </div>
-</ion-content> -->
-
-
+</ion-header>
 <ion-content>
-  <ion-list *ngFor = "let eachRest of food_data" class="accordion-list" lines="none" detail="false" no-padding>
-    <ion-item >
-      <!-- <ion-icon slot="start" name="arrow-forward" ></ion-icon> -->
-      <img src="data:image/jpeg;base64,{{eachRest.Fimage}}"  style="height: 50px; width: 80px">
-      <ion-label padding >
-          <h2 text-wrap>{{eachRest.Name}}</h2> 
-          
-        <p> Ingredient list <ion-icon name="arrow-dropdown"></ion-icon></p>
+  <ion-list *ngFor="let eachRest of food_data; let i = index;" class="accordion-list" lines="none" detail="false"
+    no-padding>
+    <ion-item>
+
+      <img src="data:image/jpeg;base64,{{eachRest.Fimage}}" style="height: 50px; width: 80px">
+      <ion-label padding>
+        <h2 text-wrap>{{eachRest.Name}}</h2>
+
+
+        <p tappable (click)="toggleSection(i)"
+        [ngClass]="{'section-active':eachRest.open, 'section': !eachRest.open}"> Ingredient list <ion-icon slot="start" name="arrow-down" *ngIf="eachRest.open"></ion-icon>
+          <ion-icon slot="start" name="arrow-forward" *ngIf="!eachRest.open"></ion-icon>
+        </p>
+        
       </ion-label>
-      <ion-icon name="remove" color="danger" (click)="removeItem()"></ion-icon>
-          &nbsp;
-          {{noOfItems}}
-          &nbsp;
-        <ion-icon name="add" color="success" (click)="addItem()"></ion-icon>
-      <span slot="end">&#8377; {{eachRest.Rate}}/- &nbsp;     
+      <ion-icon name="remove" color="danger" (click)="removeItem(eachRest.ItemID)"></ion-icon>
+      &nbsp;
+      {{displayQty(eachRest.ItemID)}}
+      &nbsp;
+      <ion-icon name="add" color="success" (click)="addItem(eachRest.ItemID)"></ion-icon>
+      <span slot="end">&#8377; {{eachRest.Rate}}/- &nbsp;
       </span>
-      
-      
+
+
       <!-- <h3 slot="end" >{{eachRest.Rate}}/-</h3> -->
     </ion-item>
+    <div *ngIf="eachRest.children && eachRest.open">
+        Test
+      </div>
     
   </ion-list>
+  <ion-fab vertical="bottom" horizontal="end" slot="fixed" >
+      <ion-fab-button (click)="order()">
+        <ion-icon name="cart"></ion-icon>
+      </ion-fab-button>
+    </ion-fab>
 </ion-content>
