--- a/src/app/components/modal/modal.component.html
+++ b/src/app/components/modal/modal.component.html
@@ -2,14 +2,18 @@
 <ion-content padding>
   <ion-card>
     <ion-card-content>
+      <ion-item no-padding lines="none" detail="false">
+        <ion-icon name="close" (click)="closeModal1()" slot="end" no-padding></ion-icon>
+      </ion-item>
       <ion-note *ngIf="wrongCredentials" color="danger" text-center>
-        <ion-icon name="alert"></ion-icon>&nbsp;&nbsp;Wrong Username/Password
+        <ion-icon name="alert"></ion-icon>&nbsp;&nbsp;Invalid Username/Password
       </ion-note>
-      <ion-input [(ngModel)]="userData.email" type="email" placeholder="Email" position="floating" padding id="email">
-      </ion-input>
-
-      <ion-input [(ngModel)]="userData.password" type="password" placeholder="Password" padding></ion-input>
-
+      <ion-item>
+        <ion-input [(ngModel)]="userData.email" type="email" placeholder="Email" position="floating" id="email" required padding></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-input [(ngModel)]="userData.password" type="password" placeholder="Password" required padding></ion-input>
+      </ion-item>
       <ion-button expand="block" (click)="userLogin()" shape="round">Login</ion-button>
       <ion-button expand="block" (click)="gotoRegister1()" color="light" shape="round">Register</ion-button>
 
