--- a/src/app/components/modal/modal.component.html
+++ b/src/app/components/modal/modal.component.html
@@ -13,7 +13,7 @@
       <ion-button expand="block" (click)="userLogin()" shape="round">Login</ion-button>
       <ion-button expand="block" (click)="gotoRegister1()" color="light" shape="round">Register</ion-button>
 
-      <ion-item href="./home">
+      <ion-item href="./home/xxx.html">
         <a>Forgot Your Password?</a>
       </ion-item>
     </ion-card-content>
