--- a/src/app/foodmenu/foodmenu.page.scss
+++ b/src/app/foodmenu/foodmenu.page.scss
@@ -15,6 +15,6 @@ ion-header {
         text-align: center;
         font-style: italic;
         font-weight: bold;
-        background-image: linear-gradient(to right,red, yellow);
+        background-color: lightgrey;
     }
 }
