--- a/src/app/restaurant-expand/restaurant-expand.page.scss
+++ b/src/app/restaurant-expand/restaurant-expand.page.scss
@@ -26,7 +26,8 @@ ion-header {
             //text-align: center;
             font-style: italic;
             font-weight: bold;
-            background-image: linear-gradient(to right,red, yellow);
+            background-color: lightgrey;
+            // background-image: linear-gradient(to right,red, yellow);
             text-align: center;
 
         
@@ -35,9 +36,10 @@ ion-header {
 
 .ratingBar {
     font-family: fantasy;
-    background-image: linear-gradient(to right,red, yellow);
+    //background-image: linear-gradient(to right,red, yellow);
     width: 100%;
     padding: 2px;
+    background-color: lightgrey;
     //text-decoration: underline;
 }
 
